# real_estate_modeling_api

./: .env.dist  .gitignore  Dockerfile  README.md  pyproject.toml
real_estate_modeling_api/items/: items.bru
real_estate_modeling_api/services/: model.bru
src/real_estate_modeling_api/api/: main.py  schemas.py
src/real_estate_modeling_api/api/routes/: eligibility.py  items.py  model.py  users.py
src/real_estate_modeling_api/conf/: config.yaml
src/real_estate_modeling_api/core/: eligibility.py  model.py
src/real_estate_modeling_api/db/: crud.py  database.py  models.py
src/service_rest_api_template/api/: main.py  schemas.py
src/service_rest_api_template/api/routes/: hello.py  items.py  users.py
src/service_rest_api_template/conf/: config.yaml
src/service_rest_api_template/core/: hello.py
src/service_rest_api_template/db/: crud.py
tests/functional/real_estate_modeling_api/: bruno.json
tests/functional/real_estate_modeling_api/items/: create item.bru  delete item.bru
tests/functional/real_estate_modeling_api/users/: delete user.bru  users.bru
tests/functional/service_rest_api_template/: bruno.json
tests/functional/service_rest_api_template/services/: hello.bru
tests/functional/service_rest_api_template/users/: create user.bru
